Sat Jan  3 18:53:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/fiddle/lib/fiddle/cparser.rb (parse_ctype): limit split word
	  number as the rest are not used.

Sat Jan  3 18:19:50 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/fiddle/lib/fiddle/cparser.rb: r49110 broke Fiddle::Import with
	  type_alias.
	* test/fiddle/test_cparser.rb: added type_alias test for parse_ctype
	  and parse_struct_signature.

Sat Jan  3 16:02:20 2015  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/net/http.rb (Net::HTTP.proxy_user): retrieve proxy user from http_proxy.
	* lib/net/http.rb (Net::HTTP.proxy_pass): retrieve proxy password from http_proxy.
	  Patch by Rafael dos Santos Silva. [fix GH-763]

Sat Jan  3 11:50:16 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/openssl/ossl.h: avoid to build failure of Windows environment.
	* ext/openssl/ossl_ssl_session.c: ditto.

Sat Jan  3 11:27:46 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* array.c: Improve performance of Array#shift. use shared instead of
	  MEMMOVE if with arguments. Patch by @ksss [fix GH-537]
	* test/ruby/test_array.rb: ditto.
	* benchmark/bm_array_shift.rb: Added benchmark of GH-537 issue.

Sat Jan  3 10:38:52 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/http.rb: More descriptive error message when net/http fails
	  to connect to a server. Patch by @xaviershay [fix GH-700]
	* test/net/http/test_http.rb: ditto.

Sat Jan  3 10:14:51 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/openssl/ossl.h: Make `SSL_SESSION_cmp` use `CRYPTO_memcmp`
	  [fix GH-591] Patch by @PiPeep
	* ext/openssl/ossl_ssl_session.c: ditto.

Sat Jan  3 09:54:32 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/fiddle/lib/fiddle/cparser.rb: Support for Fiddle::CParser
	  to handle rich signatures including parameter names and function
	  pointer types. Patch by @theryan [fix GH-590]
	* test/fiddle/test_cparser.rb: ditto.
